# GravitationalRayMarchingServer

./: .gitmodules  CMakeLists.txt  main.cpp  vcpkg.json
libgrmproto/: CMakeLists.txt
libgrmproto/protobuf/: Body.proto  Camera.proto  Material.proto  Primitives.proto  README.md  Render.proto  RenderConfig.proto  Scene.proto  Texture.proto
src/: GRMExceptions.cpp  GRMExceptions.h  conversions.cpp  conversions.h  main.cpp  requests.cpp  requests.h
